# gazelle:prefix k8s.io/repo-infra
# gazelle:exclude verify

# Use the Bazel-vendored protobuf library since we use go_proto_library
# gazelle:resolve go github.com/golang/protobuf/proto @com_github_golang_protobuf//proto:go_default_library

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

load("//defs:run_in_workspace.bzl", "workspace_binary")

workspace_binary(
    name = "gofmt",
    cmd = "@go_sdk//:bin/gofmt",
)

workspace_binary(
    name = "go",
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "kazel",
    cmd = "//cmd/kazel",
)
