package(default_visibility = ["//visibility:public"])

test_suite(
    name = "verify-all",
    tags = ["lint"],  # picks up all non-manual targets with this tag
)

_GAZELLE = "@bazel_gazelle//cmd/gazelle"

_GO = "@go_sdk//:bin/go"

_KAZEL = "@io_k8s_repo_infra//cmd/kazel"

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
    ],
    data = [
        _GAZELLE,
        _KAZEL,
    ],
)

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % _GO,
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        _GAZELLE,
        _GO,
        _KAZEL,
        ":update-bazel",
    ],
)

sh_binary(
    name = "update-gofmt",
    srcs = ["update-gofmt.sh"],
    args = ["$(location @go_sdk//:bin/gofmt)"],
    data = ["@go_sdk//:bin/gofmt"],
)

sh_test(
    name = "verify-bazel",
    srcs = ["verify-bazel.sh"],
    args = [
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
    ],
    data = [
        "@//:all-srcs",
        _GAZELLE,
        _KAZEL,
    ],
    tags = ["lint"],
)

sh_test(
    name = "verify-deps",
    srcs = ["verify-deps.sh"],
    args = [
        "$(location :update-deps)",
        "$(location %s)" % _GO,
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        _GAZELLE,
        _GO,
        _KAZEL,
        ":update-bazel",
        ":update-deps",
        "@//:all-srcs",
    ],
    tags = ["lint"],
)

sh_test(
    name = "verify-gofmt",
    srcs = ["verify-gofmt.sh"],
    args = ["$(location @go_sdk//:bin/gofmt)"],
    data = [
        "@//:all-srcs",
        "@go_sdk//:bin/gofmt",
    ],
    tags = ["lint"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
