load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/repo-infra/defs/testgen",
    visibility = ["//defs:__subpackages__"],
)

go_binary(
    name = "testgen",
    embed = [":go_default_library"],
    visibility = ["//defs:__subpackages__"],
)
